# LNLHaskell

./: .gitignore  Analysis.ods  LNLHask.cabal  README  README.md  stack.yaml
app/: Main.hs
src/: Arrays.hs  Classes.hs  Context.hs  DeepEmbedding.hs  Domain.hs  Eval.hs  Examples.hs  Frame.hs  Frame.hs~  FrameClass.hs  Interface.hs  LState.hs  LStateArray.hs  Lang.hs  MWE.hs  Prelim.hs  Proofs.hs  Sessions.hs  ShallowEmbedding.hs  Subst.hs  TH.hs  Tagless.hs  Types.hs  Vector.hs
src/examples/: Arrays.hs  ArraysSeparation.hs  ByteString.hs  Density.hs  FileHandles.hs  GUI.hs  LinTrans.hs  LinTrans2.hs  Quantum.hs  Quicksort.hs  Range.hs  RefCells.hs  Sessions.hs  Sessions2.hs  Vector.hs
