name:                LNLHask
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/LNLHask#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src, src/examples
  exposed-modules:     Lib, Prelim, Types, Classes, Interface, ShallowEmbedding, DeepEmbedding, Sessions, ByteString
  build-depends:       base >= 4.7 && < 5
                     , template-haskell == 2.11.*
                     , constraints >= 0.8
                     , singletons >= 2.2
                     , timeit >= 1.0.0.0
                     , linear >= 1.20.5
                     , array >= 0.5.1.1
                     , hmatrix >= 0.18.0.0
                     , mtl >= 2.2.1
                     , ghc-prim >= 0.5.0.0
                     , transformers >= 0.5.2
                     , word8 >= 0.1.2
  default-language:    Haskell2010
--  required-extentions:

executable LNLHask-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , LNLHask
  default-language:    Haskell2010

test-suite LNLHask-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LNLHask
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/LNLHask
